[metadata]
name = prg_rents_downloader
description = Image localization using image retrieval
author = Andrii Zakharchenko
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ABlack-git/diploma-thesis

[options]
include_package_data = True
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    prg-rents-downloader = prague_rents.__main__:main
[bdist_wheel]
universal = 0